.kubernetes/rendered/crud-service/all.yaml
---
# Source: holiday-peak-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service-crud-service
  namespace: holiday-peak-crud
  labels:
    app: crud-service
spec:
  selector:
    app: crud-service
    # When canary is disabled, select all pods
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
---
# Source: holiday-peak-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-service-crud-service
  namespace: holiday-peak-crud
  labels:
    app: crud-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
      maxSurge: 1
  selector:
    matchLabels:
      app: crud-service
  template:
    metadata:
      labels:
        app: crud-service
        canary: "false"
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: crud-service
      nodeSelector:
        agentpool: crud
      tolerations:
        - effect: NoSchedule
          key: workload
          operator: Equal
          value: crud
      containers:
        - name: crud-service
          image: "holidaypeakhub405devacr.azurecr.io/crud-service@sha256:b82c37f2ca93e463ea8f40033041da6771170fd1ea0b8aa5c48c4488424094a4"
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
---
# Source: holiday-peak-service/templates/agc-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crud-service-crud-service-agc
  namespace: holiday-peak-crud
  labels:
    app: crud-service
spec:
  parentRefs:
    - name: "holiday-peak-agc"
      namespace: "holiday-peak-crud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/health"
      backendRefs:
        - name: crud-service-crud-service
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/api"
      backendRefs:
        - name: crud-service-crud-service
          port: 80
